OLMIS-1691: Fixed vertical spacing in form

--- a/src/main/webapp/openlmis-form/form.scss
+++ b/src/main/webapp/openlmis-form/form.scss
@@ -35,7 +35,7 @@ error messages must use ARIA labels so they are associated with the input
 element.
 
 markup:
-<form class="openlmis-form">
+<form>
 	<!-- Form headings should be an appropriate heading level -->
 	<h3>Example form elements</h3>
 	<label for="exampleTextInput" >Example text input</label>
@@ -50,18 +50,18 @@ markup:
 		<option value="3">Family Planning</option>
 		<option value="4">Malaria</option>
 	</select>
-	<label>
+	<label class="checkbox">
 		<input type="checkbox" ng-value="true" />
 		Boolean checkbox, used to turn a value on or off
 	</label>
-	<fieldset>
+  <p>Our aim is to keep checkbox and radio selection markup simple and accessiable. We also allow for additional content in forms, like paragraphs.</p>
+	<fieldset class="form-group">
 		<legend>Radio elements</legend>
-    <p>Our aim is to keep checkbox and radio selection markup simple and accessiable. We also allow for additional content in forms, like paragraphs.</p>
-		<label>
+		<label class="radio">
 			<input type="radio" ng-model="radioOptions" value="0" />
 			Radio 1
 		</label>
-		<label>
+		<label class="radio">
 			<input type="radio" ng-model="radioOptions" value="1" />
 			Radio 2
 		</label>
@@ -108,6 +108,9 @@ form {
     &.form-group {
       margin: 0em;
     }
+    &:first-child{
+      margin-top: 0em;
+    }
   }
 
   > label,
@@ -116,38 +119,51 @@ form {
     margin-bottom: 0.2em;
   }
 
-  > fieldset {
-    > legend + label,
-    > label + label {
-      margin-top: 0.2em;
-    }
-  }
-
-  > input,
-  > select,
-  > textarea {
-    min-width: auto;
-  }
-
 	> input[type="submit"],
 	> input[type="button"],
 	> button {
 		flex: 0 0 auto;
+    min-width: auto;
 	}
+
+
+  > fieldset.form-group {
+    > label.checkbox,
+    > label.radio {
+      margin-top: 0.2em;
+    }
+  }
+
+  > label.checkbox,
+  > label.radio {
+    display: flex;
+    align-items: baseline;
+    margin: 0.2em 0em;
+    > * {
+      flex: 0 0 auto;
+    }
+
+    > input[type="radio"],
+    > input[type="checkbox"] {
+      order: -1;
+      position: relative;
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+    }
+  }
+
 }
 
 form {
-  > label,
-  > fieldset > legend {
-    font-size: 1em;
+  > label {
     font-weight: bold;
-    border-bottom: 0px;
   }
 
-  > fieldset > legend {
-    color: $brand-primary;
+  > label.checkbox,
+  > label.radio {
     font-weight: normal;
   }
+
   fieldset.form-group > legend,
   > fieldset.form-group > legend {
     color: $text-color;
@@ -180,7 +196,18 @@ form {
       color: $gray;
     }
   }
+}
 
+fieldset > legend {
+  @extend h4;
+  border-bottom-width: 0px;
+}
+form > fieldset:first-child {
+  margin-top: 0px; 
+  > legend:first-child {
+    padding-top: 0px;
+    margin-top: 0px;
+  }
 }
 
 form fieldset,
